--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 #Exclude everything except the c code and the verilog code and the testvectors
 /**
 !/.gitignore
+
+/ddp_sw/*
 !/ddp_sw/src/sdk/montgomery_sw_project/src/
+
+/package/*
 !/package/testvectors/
 !/package/rsa-project/src/rtl
