--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 #Exclude everything except the c code and the verilog code and the testvectors
 /**
 !/.gitignore
+!/ddp_sw/
+!/package/
 
 /ddp_sw/*
 !/ddp_sw/src/sdk/montgomery_sw_project/src/
