--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,29 @@
 #Exclude everything except the c code and the verilog code and the testvectors
-/**
+/*
 !/.gitignore
 !/ddp_sw/
 !/package/
 
 /ddp_sw/*
-!/ddp_sw/src/sdk/montgomery_sw_project/src/
+!/src/*
+
+/ddp_sw/src/*
+!/sdk/
+
+/ddp_sw/src/sdk/*
+!/montgomery_sw_project/
+
+
+/ddp_sw/src/sdk/montgomery_sw_project/*
+!/src/
 
 /package/*
 !/package/testvectors/
-!/package/rsa-project/src/rtl
+!/package/rsa-project/
+
+/package/rsa-project/*
+!/src/
+
+/package/rsa-project/src/*
+!/rtl/
+
