--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,28 @@
 #Exclude everything except the c code and the verilog code and the testvectors
 /*
 !/.gitignore
-!/ddp_sw/
-!/package/
+!/ddp_sw
+!/package
 
 /ddp_sw/*
-!/src/*
+!/ddp_sw/src
 
 /ddp_sw/src/*
-!/sdk/
+!/sdk
 
 /ddp_sw/src/sdk/*
-!/montgomery_sw_project/
-
+!/montgomery_sw_project
 
 /ddp_sw/src/sdk/montgomery_sw_project/*
-!/src/
+!/src
 
 /package/*
-!/package/testvectors/
-!/package/rsa-project/
+!/package/testvectors
+!/package/rsa-project
 
 /package/rsa-project/*
-!/src/
+!/package/rsa-project/src
 
 /package/rsa-project/src/*
-!/rtl/
+!/package/rsa-project/src/rtl
 
