--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,13 @@
 !/ddp_sw/src
 
 /ddp_sw/src/*
-!/sdk
+!/ddp_sw/src/sdk
 
 /ddp_sw/src/sdk/*
-!/montgomery_sw_project
+!/ddp_sw/src/sdk/montgomery_sw_project
 
 /ddp_sw/src/sdk/montgomery_sw_project/*
-!/src
+!/ddp_sw/src/sdk/montgomery_sw_project/src
 
 /package/*
 !/package/testvectors
