--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,17 @@
 !/ddp_sw
 !/package
 
-#/ddp_sw/*
-#!/ddp_sw/src
+/ddp_sw/*
+!/ddp_sw/src
 
-#/ddp_sw/src/*
-#!/ddp_sw/src/sdk
+/ddp_sw/src/*
+!/ddp_sw/src/sdk
 
-#/ddp_sw/src/sdk/*
-#!/ddp_sw/src/sdk/montgomery_sw_project
+/ddp_sw/src/sdk/*
+!/ddp_sw/src/sdk/montgomery_sw_project
 
-#/ddp_sw/src/sdk/montgomery_sw_project/*
-#!/ddp_sw/src/sdk/montgomery_sw_project/src
+/ddp_sw/src/sdk/montgomery_sw_project/*
+!/ddp_sw/src/sdk/montgomery_sw_project/src
 
 /package/*
 !/package/testvectors
